# application-services

./: .buildconfig-android.yml  .taskcluster.yml  CHANGELOG.md  Cargo.toml  build.gradle
automation/taskcluster/: decision_task.py  decisionlib.py
automation/taskcluster/docker/: build.dockerfile
components/alice/: Cargo.toml
components/alice/nss-sys/: Cargo.toml  build.rs
components/alice/nss-sys/src/: lib.rs
components/alice/nss-sys/src/backend/: dylib_nss.rs  geckoview_nss.rs  mod.rs
components/alice/nss-sys/src/types/: nss3.rs
components/alice/src/: digest.rs  error.rs  util.rs
components/fxa-client/: Cargo.toml
components/fxa-client/examples/: devices_api.rs
components/fxa-client/ffi/: Cargo.toml
components/fxa-client/src/: errors.rs  scoped_keys.rs
libs/: README.md  bootstrap-desktop.sh  build-all-android.sh  build-all-ios.sh  build-all.sh  build-nspr-ios.sh  build-nss-desktop.sh  build-nss-ios.sh  build-openssl-ios.sh
megazords/fenix/android/: build.gradle
megazords/reference-browser/: Cargo.toml
megazords/reference-browser/android/: build.gradle
